RESOLVED FIXED101065
Web Inspector: JavaScript web workers debugging crashes
https://bugs.webkit.org/show_bug.cgi?id=101065
Summary Web Inspector: JavaScript web workers debugging crashes
Yury Semikhatsky
Reported 2012-11-02 09:02:54 PDT
Original Chromium bug report: http://code.google.com/p/chromium/issues/detail?id=153913 Repro steps: 1. Open attached page, enable debugger tools with {Workers.Pause on start} 2. Continue from the top debugging screen (press start, or just close the window) 3. Crash
Attachments
Patch (1.37 KB, patch)
2012-11-02 09:07 PDT, Yury Semikhatsky
no flags
Patch (10.21 KB, patch)
2012-11-05 22:28 PST, Yury Semikhatsky
no flags
Patch (10.82 KB, patch)
2012-11-06 00:29 PST, Yury Semikhatsky
apavlov: review+
apavlov: commit-queue+
Yury Semikhatsky
Comment 1 2012-11-02 09:07:00 PDT
Yury Semikhatsky
Comment 2 2012-11-05 22:28:07 PST
Yury Semikhatsky
Comment 3 2012-11-05 22:28:40 PST
(In reply to comment #2) > Created an attachment (id=172488) [details] > Patch Added layout test.
Alexander Pavlov (apavlov)
Comment 4 2012-11-05 23:45:50 PST
Comment on attachment 172488 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=172488&action=review > LayoutTests/inspector-protocol/debugger-terminate-dedicated-worker-while-paused.html:31 > + "id": workerRequestId++ } closing brace could be aligned with its opening counterpart, like anywhere else
Yury Semikhatsky
Comment 5 2012-11-05 23:49:00 PST
(In reply to comment #4) > (From update of attachment 172488 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=172488&action=review > > > LayoutTests/inspector-protocol/debugger-terminate-dedicated-worker-while-paused.html:31 > > + "id": workerRequestId++ } > > closing brace could be aligned with its opening counterpart, like anywhere else Done.
Yury Semikhatsky
Comment 6 2012-11-06 00:29:46 PST
Yury Semikhatsky
Comment 7 2012-11-06 00:49:49 PST
Note You need to log in before you can comment on or make changes to this bug.