Web Inspector: JavaScript web workers debugging crashes https://bugs.webkit.org/show_bug.cgi?id=101065

Reviewed by Alexander Pavlov.

Source/WebCore:

Clear m_pageInspector when page inspector instance is deleted.
Disable worker inspection when front-end disconnects.

Test: inspector-protocol/debugger-terminate-dedicated-worker-while-paused.html

* inspector/InspectorWorkerAgent.cpp:
(WebCore::InspectorWorkerAgent::WorkerFrontendChannel::~WorkerFrontendChannel): notify
WorkerMessagingProxy so that it can clear pointer to the channel.

LayoutTests:

Test that inspected page won't crash if inspected worker is terminated when it is paused
on a breakpoint.

* inspector-protocol/debugger-terminate-dedicated-worker-while-paused-expected.txt: Added.
* inspector-protocol/debugger-terminate-dedicated-worker-while-paused.html: Added.
* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:
* platform/mac/TestExpectations:
* platform/qt/TestExpectations:
* platform/win/TestExpectations:
* platform/wincairo/TestExpectations:

Canonical link: https://commits.webkit.org/119387@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133569 268f45cc-cd09-0410-ab3c-d52691b4dbfc